Sun May 16 22:17:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* eval.c (setup_exception): let SystemStackError#backtrace return an
	  single element array instead of string itself.  [ruby-core:30196]

Sun May 23 17:29:41 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (capi): uses a timestamp file to get rid of 
	  generating twice.

Sun May 23 17:48:39 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/lib/openssl/x509-internal.rb, lib/forwardable.rb,
	  lib/irb/cmd/fork.rb, lib/mutex_m.rb,
	  lib/shell/process-controller.rb, lib/sync.rb, object.c:
	  suppress warnings patched by Benoit Daloze at [ruby-core:30366].

	* parse.y (warn_balanced): no warning for singleton class.
	  [ruby-core:30366]

Sun May 23 17:16:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (CONST_ID_CACHE, rb_intern_const): suppress
	  warnings with -Wconversion.

Sat May 22 06:46:45 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c: revert FIBER_USE_NATIVE feature.
	i.e. r27635, r27643, r27646, r27682, r27701

Fri May 21 23:46:43 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_invoke): merged from trunk (r27922).
	  raise NoMethodError when COM method is not found.

	* test/win32ole/test_win32ole.rb (test_no_method_error): ditto.

Fri May 21 19:11:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/nkf/nkf.c (rb_nkf_convert, rb_nkf_guess): check too huge
	  string.

Thu May 20 22:19:37 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (rb_f_caller): update rdoc.  a patch from Nobuhiro IMAI
	  <nov at yo.rim.or.jp> in [ruby-dev:41348].

Thu May 20 22:17:24 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm.c (vm_backtrace_each): now takes an init function to distinguish
	  an empty stack from out of stack.  [ruby-dev:41366]

	* vm_eval.c (print_backtrace, rb_thread_backtrace): ditto.

Wed May 19 22:48:06 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
